refactor of FileSaver passing tests